[gd_scene load_steps=3 format=3 uid="uid://bo67dtoo3b7bp"]

[ext_resource type="Texture2D" uid="uid://d31m8y64nnqqc" path="res://assets/tilemap.png" id="1_mo31l"]
[ext_resource type="Script" path="res://brick_pieces.gd" id="1_mtg5d"]

[node name="brick_pieces" type="Node2D"]
script = ExtResource("1_mtg5d")

[node name="Piece1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-3, -3)
texture = ExtResource("1_mo31l")
region_enabled = true
region_rect = Rect2(12, 0, 6, 6)

[node name="Piece2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(3, -3)
texture = ExtResource("1_mo31l")
region_enabled = true
region_rect = Rect2(18, 0, 6.14787, 6)

[node name="Piece3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-3, 3)
texture = ExtResource("1_mo31l")
region_enabled = true
region_rect = Rect2(12, 6, 6, 6)

[node name="Piece4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(3, 3)
texture = ExtResource("1_mo31l")
region_enabled = true
region_rect = Rect2(18, 6, 6, 6)
